Move chezmoi scripts

--- a/run_onchange_npm-install-global-packages.sh.tmpl
+++ b/run_onchange_npm-install-global-packages.sh.tmpl
@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
-figprint "Install NPM Globals..."
+
+"$CHEZMOI_SOURCE_DIR/bin/figprint" "Installing NPM Globals"
 
 npm i -g {{ range .packages.npm_globals -}} {{ . | quote}} {{end}}
