--- a/run_onchange_darwin-install-packages.sh.tmpl
+++ b/run_onchange_darwin-install-packages.sh.tmpl
@@ -1,5 +1,6 @@
 {{ if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
+"$CHEZMOI_SOURCE_DIR/bin/figprint" "Installing brew packages..."
 
 brew bundle --file=/dev/stdin <<EOF
 {{ range .packages.darwin.taps -}}
