Update linux install script

--- a/run_onchange_linux-install-packages.sh.tmpl
+++ b/run_onchange_linux-install-packages.sh.tmpl
@@ -1,5 +1,5 @@
 {{ if eq .chezmoi.os "linux" }}
-#!/bin/bash
+#!/usr/bin/env bash
 
 echo "TODO: Update run_onchange_linux-packages.sh to be more platform specific"
 
